# wgpu

./: Cargo.toml
benches/: Cargo.toml
benches/benches/wgpu-benchmark/: bind_groups.rs  computepass.rs  renderpass.rs  resource_creation.rs  shader.rs
cts_runner/: Cargo.toml
cts_runner/src/: main.rs
deno_webgpu/: Cargo.toml  adapter.rs  bind_group.rs  bind_group_layout.rs  buffer.rs  byow.rs  command_buffer.rs  command_encoder.rs  compute_pass.rs  compute_pipeline.rs  device.rs  error.rs  lib.rs  pipeline_layout.rs  query_set.rs  queue.rs  render_bundle.rs  render_pass.rs  render_pipeline.rs  sampler.rs  shader.rs  surface.rs  texture.rs  webidl.rs
examples/features/: Cargo.toml
examples/features/src/: framework.rs  utils.rs
examples/features/src/big_compute_buffers/: mod.rs  tests.rs
examples/features/src/bunnymark/: mod.rs
examples/features/src/hello_synchronization/: tests.rs
examples/features/src/hello_triangle/: mod.rs
examples/features/src/hello_windows/: mod.rs
examples/features/src/mipmap/: mod.rs
examples/features/src/ray_cube_compute/: mod.rs
examples/features/src/ray_cube_fragment/: mod.rs
examples/features/src/ray_cube_normals/: mod.rs
examples/features/src/ray_scene/: mod.rs
examples/features/src/ray_shadows/: mod.rs
examples/features/src/ray_traced_triangle/: mod.rs
examples/features/src/shadow/: mod.rs
examples/features/src/skybox/: mod.rs
examples/features/src/timestamp_queries/: mod.rs
examples/features/src/uniform_values/: mod.rs
examples/features/src/water/: mod.rs
examples/standalone/custom_backend/: Cargo.toml
lock-analyzer/: Cargo.toml
lock-analyzer/src/: main.rs
naga/: Cargo.toml
naga-cli/: Cargo.toml  lib.rs
naga/fuzz/: Cargo.toml
naga/fuzz/fuzz_targets/: glsl_parser.rs
naga/hlsl-snapshots/: Cargo.toml
naga/src/: error.rs  path_like.rs  span.rs
naga/src/arena/: handle.rs  range.rs
naga/src/back/: pipeline_constants.rs
naga/src/back/glsl/: features.rs  mod.rs
naga/src/back/hlsl/: conv.rs  help.rs  storage.rs  writer.rs
naga/src/back/msl/: mod.rs  writer.rs
naga/src/back/spv/: block.rs  image.rs  index.rs  layout.rs  subgroup.rs  writer.rs
naga/src/back/wgsl/: writer.rs
naga/src/common/wgsl/: mod.rs  types.rs
naga/src/compact/: mod.rs  statements.rs
naga/src/front/: mod.rs
naga/src/front/glsl/: ast.rs  builtins.rs  context.rs  error.rs  functions.rs  lex.rs  mod.rs  offset.rs  parser.rs  parser_tests.rs  types.rs  variables.rs
naga/src/front/spv/: function.rs  image.rs  mod.rs
naga/src/front/wgsl/: error.rs  mod.rs  tests.rs
naga/src/proc/: constant_evaluator.rs  index.rs  mod.rs  namer.rs  typifier.rs
naga/src/proc/overloads/: any_overload_set.rs  constructor_set.rs  list.rs  mathfunction.rs  regular.rs  rule.rs  utils.rs
naga/src/valid/: expression.rs  function.rs  handles.rs  interface.rs  mod.rs  type.rs
naga/tests/naga/: validation.rs
naga/xtask/: Cargo.toml
naga/xtask/src/: cli.rs  main.rs  process.rs  validate.rs
player/: Cargo.toml
player/src/: main.rs
tests/: Cargo.toml
tests/src/: expectations.rs  image.rs  init.rs  lib.rs  native.rs  params.rs  run.rs
tests/tests/wgpu-dependency/: main.rs
tests/tests/wgpu-gpu/: bgra8unorm_storage.rs  bind_group_layout_dedup.rs  bind_groups.rs  buffer.rs  buffer_copy.rs  buffer_usages.rs  clear_texture.rs  clip_distances.rs  cloneable_types.rs  compute_pass_ownership.rs  device.rs  dispatch_workgroups_indirect.rs  draw_indirect.rs  dual_source_blending.rs  encoder.rs  external_texture.rs  float32_filterable.rs  instance.rs  life_cycle.rs  oob_indexing.rs  oom.rs  pipeline.rs  pipeline_cache.rs  poll.rs  push_constants.rs  query_set.rs  queue_transfer.rs  render_pass_ownership.rs  render_target.rs  resource_descriptor_accessor.rs  resource_error.rs  samplers.rs  texture_blit.rs  texture_bounds.rs  texture_view_creation.rs  timestamp_query.rs  transfer.rs  transition_resources.rs  write_texture.rs  zero_init_texture_after_discard.rs
tests/tests/wgpu-gpu/binding_array/: buffers.rs  sampled_textures.rs  samplers.rs  storage_textures.rs
tests/tests/wgpu-gpu/image_atomics/: mod.rs
tests/tests/wgpu-gpu/nv12_texture/: mod.rs
tests/tests/wgpu-gpu/occlusion_query/: mod.rs
tests/tests/wgpu-gpu/ray_tracing/: as_build.rs  as_create.rs  as_use_after_free.rs  limits.rs  mod.rs  shader.rs
tests/tests/wgpu-gpu/regression/: issue_3349.rs  issue_3457.rs  issue_4024.rs  issue_4122.rs  issue_4485.rs  issue_4514.rs  issue_5553.rs  issue_6317.rs  issue_6467.rs  issue_6827.rs
tests/tests/wgpu-gpu/scissor_tests/: mod.rs
tests/tests/wgpu-gpu/shader/: array_size_overrides.rs  data_builtins.rs  numeric_builtins.rs  struct_layout.rs  workgroup_size_overrides.rs  zero_init_workgroup_mem.rs
tests/tests/wgpu-gpu/shader_primitive_index/: mod.rs
tests/tests/wgpu-validation/: noop.rs
wgpu/: Cargo.toml
wgpu-core/platform-deps/emscripten/: Cargo.toml
wgpu-core/platform-deps/windows-linux-android/: Cargo.toml
wgpu-hal/: Cargo.toml
wgpu-hal/examples/: raw-gles.rs
wgpu-hal/examples/halmark/: main.rs
wgpu-hal/examples/ray-traced-triangle/: main.rs
wgpu-hal/src/: lib.rs
wgpu-hal/src/auxil/: renderdoc.rs
wgpu-hal/src/dx12/: adapter.rs  command.rs  conv.rs  device.rs  instance.rs  mod.rs  sampler.rs  shader_compilation.rs  suballocation.rs
wgpu-hal/src/gles/: adapter.rs  command.rs  device.rs  egl.rs  mod.rs  queue.rs  web.rs  wgl.rs
wgpu-hal/src/metal/: adapter.rs  command.rs  conv.rs  device.rs  layer_observer.rs  mod.rs  surface.rs  time.rs
wgpu-hal/src/noop/: command.rs
wgpu-hal/src/vulkan/: command.rs  device.rs  instance.rs  sampler.rs
wgpu-info/: Cargo.toml
wgpu-info/src/: human.rs
wgpu-macros/: Cargo.toml
wgpu-types/: Cargo.toml
wgpu-types/src/: features.rs  instance.rs
wgpu/src/: dispatch.rs  lib.rs  macros.rs
wgpu/src/api/: buffer.rs  queue.rs  surface_texture.rs  tlas.rs
wgpu/src/backend/: mod.rs  webgpu.rs  wgpu_core.rs
wgpu/src/util/: belt.rs  mod.rs  texture_blitter.rs
xtask/: Cargo.toml
xtask/src/: cts.rs  main.rs  run_wasm.rs  test.rs  vendor_web_sys.rs
(+72 files in other folders)
