[package]
name = "cts_runner"
version = "26.0.1"
authors = ["Luca Casonato <hello@lcas.dev>"]
edition = "2024"
rust-version = "1.85.0"
description = "CTS runner for wgpu"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
env_logger = "0.11.8"
zeroshot-workspace-hack = { version = "0.1", path = "../../../workspace-hack" }

# We make all dependencies conditional on not being wasm,
# so the whole workspace can built as wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deno_console = "0.216.0"
deno_core = "0.362.0"
deno_url = "0.216.0"
deno_web = "0.247.0"
deno_webidl = "0.216.0"
deno_webgpu = { path = "../deno_webgpu" }
tokio = { version = "1.47.1", features = ["full"] }
termcolor = { path = "../../../forks/termcolor" }
