[package]
name = "lock-analyzer"
edition = "2024"
rust-version = "1.85.0"
keywords = ["graphics", "gamedev", "gpu", "vulkan", "metal"]
license = "MIT OR Apache-2.0"
homepage = "https://wgpu.rs"
repository = "https://github.com/gfx-rs/wgpu"
version = "26.0.1"
authors = ["wgpu developers"]
publish = false

[dependencies]
ron = "0.11.0"
anyhow = "1.0.100"
zeroshot-workspace-hack = { version = "0.1", path = "../../../workspace-hack" }

[dependencies.serde]
version = "1.0.226"
features = ["default", "serde_derive"]

[lints.clippy]
disallowed_types = "allow"
