[[test]]
name = "wgpu-compile"
harness = true

[[test]]
name = "wgpu-dependency"
harness = true

[[test]]
name = "wgpu-gpu"
harness = false

[[test]]
name = "wgpu-validation"
harness = true

[package]
name = "wgpu-test"
version = "26.0.1"
authors = [ "wgpu developers",]
edition = "2024"
description = "common code for wgpu tests"
homepage = "https://github.com/gfx-rs/wgpu"
repository = "https://github.com/gfx-rs/wgpu"
keywords = [ "graphics", "wgpu", "test",]
license = "MIT"
rust-version = "1.85.0"
publish = false

[features]
webgl = [ "wgpu/webgl",]
test-build-with-profiling = [ "profiling/type-check",]

[dependencies]
anyhow = "1.0.100"
arrayvec = "0.7.6"
approx = "0.5.1"
bitflags = "2.9.4"
bytemuck = "1.23.2"
cfg-if = "1.0.3"
ctor = "0.5.0"
futures-lite = "2.6.1"
glam = "0.30.7"
itertools = "0.14.0"
image = "0.25.8"
libtest-mimic = "0.8.1"
log = "0.4.28"
nanorand = "0.8.0"
parking_lot = "0.12.4"
png = "0.18.0"
pollster = "0.4.0"
profiling = "1.0.17"
serde_json = "1.0.145"
serde = "1.0.226"
trybuild = "1.0.111"

[dependencies.wgpu]
path = "../wgpu"
features = [ "noop",]

[dependencies.wgpu-hal]
path = "../wgpu-hal"
features = [ "validation_canary",]

[dependencies.wgpu-macros]
path = "../wgpu-macros"

[dependencies.half]
version = "2.6.0"
features = [ "bytemuck", "std",]

[dependencies.strum]
version = "0.27.2"
features = [ "derive",]



[lints.clippy]
disallowed_types = "allow"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
cargo_metadata = "0.20"
env_logger = "0.11"
nv-flip = "0.1"
parking_lot = "0.12"

[target."cfg(target_arch = \"wasm32\")".dependencies]
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = "0.3"

[target."cfg(target_arch = \"wasm32\")".dev-dependencies]
image = "0.25"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"

[target."cfg(target_arch = \"wasm32\")".dev-dependencies.web-sys]
version = "0.3"
features = [ "CanvasRenderingContext2d", "Blob",]
