[package]
name = "wgpu-info"
version = "26.0.1"
authors = [ "wgpu developers",]
edition = "2024"
description = "A tool to print and process information about available wgpu adapters."
homepage = "https://wgpu.rs"
repository = "https://github.com/gfx-rs/wgpu"
keywords = [ "graphics", "gamedev", "gpu", "vulkan", "metal",]
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.9.4"
env_logger = "0.11.8"
pico-args = "0.5.0"
serde_json = "1.0.145"

[dependencies.hashbrown]
version = "0.16.0"
features = [ "serde",]

[dependencies.serde]
version = "1.0.226"
features = [ "default",]

[dependencies.wgpu]
path = "../wgpu"

[dependencies.zeroshot-workspace-hack]
version = "0.1"
path = "../../../workspace-hack"

[lints.clippy]
disallowed_types = "allow"
