[package]
name = "wgpu-xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    # Added by xshell
    'cfg(trick_rust_analyzer_into_highlighting_interpolated_bits)',
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# The dependencies in this config have no transitive dependencies.
anyhow = "1.0.100"
env_logger = "0.11.8"
regex-lite = "0.1.7"
log = "0.4.28"
pico-args = "0.5.0"
xshell = "0.3.0-pre.2"

[dependencies]
zeroshot-workspace-hack = { version = "0.1", path = "../../../workspace-hack" }
