[package]
name = "wgpu-core-deps-emscripten"
version = "26.0.1"
authors = ["wgpu developers"]
edition = "2024"
description = "Feature unification helper crate for the Emscripten platform"
homepage = "https://wgpu.rs"
repository = "https://github.com/gfx-rs/wgpu"
keywords = ["graphics", "gamedev", "gpu", "vulkan", "metal"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# Override the workspace's `rust-version` key. Firefox uses `cargo vendor` to
# copy the crates it actually uses out of the workspace, so it's meaningful for
# them to have less restrictive MSRVs individually than the workspace as a
# whole, if their code permits. See `../README.md` for details.
rust-version = "1.85.0"

[features]
gles = ["wgpu-hal/gles"]

# Depend on wgpu-hal conditionally, so that the above features only apply to wgpu-hal on this set of platforms.
[target.'cfg(target_os = "emscripten")'.dependencies]
wgpu-hal = { path = "../../../wgpu-hal" }


